src/styles.scss
// color Pallette
$black: #111111;
$gray: #3A3A3A;
$lesserGray: #7a7a7a;
$white: #ffffff;
$yellow: #FEBD29;


// functions
@mixin flex($direction, $justify, $align) {
  display: flex;
  flex-direction: $direction;
  justify-content: $justify;
  align-items: $align;
}

@mixin marginPadding0 {
  margin: 0;
  padding: 0;
}


// styles
:root {
  font-family: Roboto Regular, sans-serif;
  color: $white;
  background-color: $gray;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

body {
  @include marginPadding0;
}

#homepage {
  @include flex(column, flex-start, center);

  .banner {
    @include flex(column, center, center);
    background: linear-gradient(to right, #000000, #FEBD29, #000000);
    width: 100%;
    height: 210px;
  }

  .top {
    @include flex(row, space-between, center);
    margin-top: -210px;
    height: 420px;
    width: 100%;

    .time-progress {
      @include flex(row, flex-start, flex-start);
      margin-left: 120px;
      width: 360px;
      height: 140px;
      background-color: $black;
      border: black 1px solid;
      border-radius: 9px;
      box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);

      .progress-bar {
        width: 100%;
        height: 100%;
        border: none;
        border-radius: 9px;
      }
    }

    .profile {
      margin-right: 120px;
      width: 260px;
      height: 270px;
      background-color: $black;
      border: black 1px solid;
      border-radius: 3px;
      box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
    }
  }

  .content {
    margin: 0 176px;

    h1 {
      font-size: 24px;
      font-weight: 400;
    }

    .first-section {
      @include flex(row, flex-start, flex-start);

      .basic {
        @include flex(column, flex-start, flex-start);
        margin-right: 150px;

        .water-counter {
          @include flex(column, flex-start, center);
          margin-top: 30px;
          width: 230px;
          background-color: $black;
          border: black 1px solid;
          border-radius: 3px;
          box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);

          h1 {
            margin: 20px 0 15px 0;
            font-size: 18px;
            font-weight: 600;
          }

          .total {
            @include flex(row, center, flex-start);
            margin: 10px 0 18px 0;
            padding: 5px;
            border: $black 1px solid;
            border-radius: 3px;
            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.0);

            h3 {
              margin: 0 3px 0 3px;
              font-size: 14px;
              font-weight: 600;
            }

            input {
              width: 53px;
              height: 16px;
              background-color: $black;
              color: $lesserGray;
              border: $lesserGray 1px solid;
              border-radius: 3px;
              font-size: 12px;
              font-weight: 800;
            }
          }

          .achieved {
            border: $yellow 1px solid;
            border-radius: 3px;
            box-shadow: 0px 0px 10px 0px rgba(254, 189, 41, 0.75);
          }

          section {
            @include flex(row, center, center);
            @include marginPadding0();
            width: 100%;

            input {
              @include marginPadding0();
              width: 50px;
              height: 19px;
              background-color: $lesserGray;
              color: $black;
              border: $lesserGray 1px solid;
              border-radius: 3px;
              font-size: 10px;
              font-weight: 600;
            }

            .plus-water {
              @include flex(row, space-between, center);
              height: 25px;
              background-color: $lesserGray;
              border: $black 1px solid;
              border-radius: 3px;
              color: black;
              margin: 0 5px 0 5px;
              font-size: 12px;
              font-weight: 800;
              padding: 0 7px 0 7px;

              button {
                @include marginPadding0();
                @include flex(row, center, center);
                background-color: $lesserGray;
                border: none;
                color: black;
                margin-left: 5px;

                .octicon-plus {
                  width: 12px;
                  height: 12px;
                }
              }
            }
          }
        }

        .skills {
          @include flex(column, flex-start, flex-start);

          .skills-graphic {
            @include flex(column, center, center);
            width: 400px;
            height: 205px;
            background-color: $black;
            border: black 1px solid;
            border-radius: 3px;
            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
          }
        }
      }

      .central {
        @include flex(column, flex-start, flex-start);

        .central-content {
          @include flex(row, flex-start, flex-start);
          flex-wrap: wrap;
          gap: 20px;

          .card {
            color: $white;
            text-decoration: none;
            width: 200px;
            height: 180px;
            background-color: $black;
            border: black 1px solid;
            border-radius: 3px;
            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
            background-size: cover;
            background-repeat: no-repeat;
          }

          .card.watchlist {
            background-image: url("./public/mal_blue_img.png");
            background-position: center;
          }
        }
      }
    }
  }
}
/* ... */

